import javax.swing.*;
import java.awt.*;

public class Grass extends Entity{
    public Grass(int x, int y) {
        super(x,y,new ImageIcon("res/sprites/grass.png").getImage());
    }

}

