public class Main {
    public static void main(String[] args) {
        new game1().setVisible(true);
    }
}
