import javax.swing.*;
import java.awt.*;

public class Portal extends Entity{
    public Portal(int x, int y) {
        super(x,y,new ImageIcon("res/sprites/portal.png").getImage());
    }

}

