@startuml

title __BOMBERMAN's Class Diagram__\n

  namespace  {
    class Balloom {
    }
  }
  

  namespace  {
    class Bomb {
    }
  }
  

  namespace  {
    class Bomber {
    }
  }
  

  namespace  {
    class BombsItem {
    }
  }
  

  namespace  {
    class Brick {
    }
  }
  

  namespace  {
    abstract class Enemy {
    }
  }
  

  namespace  {
    abstract class Entity {
    }
  }
  

  namespace  {
    class Flame {
    }
  }
  

  namespace  {
    class FlamesItem {
    }
  }
  

  namespace  {
    class Game {
    }
  }
  

  namespace  {
    class Grass {
    }
  }
  

  namespace  {
    abstract class Item {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class Manage {
    }
  }
  

  namespace  {
    abstract class MoveEntity {
    }
  }
  

  namespace  {
    class Oneal {
    }
  }
  

  namespace  {
    class Portal {
    }
  }
  

  namespace  {
    class Screen {
    }
  }
  

  namespace  {
    class SpeedItem {
    }
  }
  

  namespace  {
    class Wall {
    }
  }
  

  namespace  {
    class game1 {
    }
  }
  

  namespace  {
    namespace ounds {
      class sounds.Sound {
      }
    }
  }
  

  Balloom -up-|> Enemy
  Bomb -up-|> Entity
  Bomber -up-|> MoveEntity
  BombsItem -up-|> Item
  Brick -up-|> Entity
  Brick o-- Item : item
  Enemy -up-|> MoveEntity
  Flame -up-|> Entity
  FlamesItem -up-|> Item
  Game .up.|> java.awt.event.ActionListener
  Game .up.|> java.lang.Runnable
  Game -up-|> javax.swing.JPanel
  Game o-- Manage : manage
  Game o-- Screen : screen
  Grass -up-|> Entity
  Item -up-|> Brick
  Manage o-- Balloom : balloom
  Manage o-- Balloom : balloom1
  Manage o-- Bomber : bomber
  MoveEntity -up-|> Entity
  Oneal -up-|> Enemy
  Portal -up-|> Entity
  Screen -up-|> javax.swing.JPanel
  Screen o-- Game : game
  Screen o-- game1 : game1
  SpeedItem -up-|> Item
  Wall -up-|> Entity
  game1 -up-|> javax.swing.JFrame
  game1 o-- Screen : screen


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
